# CMakeList.txt : CMake project for AngouriMath.CPP, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AngouriMath.CPP")
# Add source to this project's executable.
add_executable (AngouriMath.CPP "AngouriMath.CPP.cpp" "AngouriMath.CPP.h" "utils.h")

# TODO: Add tests and install targets if needed.
